# blobstore-rs

./: .gitmodules  Cargo.toml  build.rs
blobstore/: blobstore.cc  blobstore.h
src/: bridge.rs  lib.rs
